# brain_404

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
assets/: agent-flowchart.md  agent-flowchart.mmd  agentic-flowchart-first.md  agentic-flowchart-last.md  system-flowchart.md  system-flowchart.mmd
backend/: api.py
dockerfiles/: backend.dockerfile  frontend.dockerfile
src/backend/: api.py  constants.py  pyproject.toml  schemas.py
src/backend/agent/: model.py  prompts.py
src/frontend/: app.py  pyproject.toml
src/rag/data/: adr_002_why_lancedb.md  branching_and_git_workflow.md  deployment_runbook.md  employee_handbook.md  engineering_handbook.md  example_design_doc.md  incident_escalation_policy.md
src/rag/knowledge_base/: adr_001_why_fastapi.md  bad_pull_request_example.md  code_review_guidelines.md  communication_norms.md  example_incident_postmortem.md  good_pull_request_example.md  onboarding_checklist.md  rookie_mistakes.md  when_to_ask_for_help.md
