[project]
name = "wired-al"
version = "0.1.0"
description = "Wired Al LLMOps project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["ipykernel>=7.2.0"]

[tool.uv.workspace]
members = ["src/frontend", "src/backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
